# axiom

./: .gitignore  CLAUDE.md  README.md
server/: .gitignore  alembic.ini  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1bfb04b243c1_init.py  2d4c9d1f8a7b_add_llm_usage.py  6b7f3c8b7c12_add_user_name.py  88fa79d08a4f_add_user_avatar.py  be32915f9867_add_auth_models.py  c8a7e2b5b9d1_use_timestamptz.py  f352e42232a3_add_rustfs_models.py  f6100f8abffa_add_knowledgebase_models.py
server/scripts/: dev-windows.ps1  dev.ps1  get_token.py  init_knowledgebase.py  test_celery.py
server/src/: config.py  database.py  exceptions.py  main.py  models.py  pagination.py  response.py
server/src/agent/: dependencies.py  llm.py  router.py  router_graph.py  schemas.py  service.py  state.py  tools.py  utils.py
server/src/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  utils.py
server/src/knowledgebase/: __init__.py  config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py
server/src/llm_usage/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/rustfs/: client.py  dependencies.py  models.py  router.py  schemas.py  service.py
server/src/services/: logging_service.py  sms_service.py
server/tests/agent/: test_agent_memory.py
server/tests/auth/: conftest.py  test_router.py
server/tests/base/: test_config.py  test_database.py  test_exceptions.py  test_logging.py  test_pagination.py  test_response.py  test_rustfs_client.py  test_sms_service.py
(+195 files in other folders)
